--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Obasusi Kayode Adegboyega</h1>
-    <img src="/images/passport.jpg" height="200px" alt="Obasusi Kayode"/>
+    <img src="images/passport.jpg" height="200px" alt="Obasusi Kayode"/>
     <h2>PERSONAL PROFILE</h2>
     <hr>
     <p>I am a highly competent IT professional with a proven track record with over 7 years’ experience in surveillance cameras, networking, web designing, VoIP service and digital marketing. I have strong technical skills as well as excellent interpersonal skills, enabling me to interact with a wide range of clients. I am eager to be challenged in order to grow and further improve my IT skills. My greatest passion in life is using my technical know-how to benefit other people and organizations.</p>
